[gd_scene load_steps=15 format=3 uid="uid://cvauq1jyuru82"]

[ext_resource type="Texture2D" uid="uid://dvrvvlrxraf8d" path="res://assets/Validator.png" id="1_0invr"]
[ext_resource type="Script" uid="uid://b0eyo5ajw4v8f" path="res://scenes/objects/level_in_out/output_validator.gd" id="1_bf6jn"]
[ext_resource type="Script" uid="uid://cwhvnxwvdhkh5" path="res://scenes/utils/link/movement/number_movement.gd" id="2_md46i"]
[ext_resource type="Script" uid="uid://dmbgxyol7327d" path="res://scripts/resettable.gd" id="3_bf6jn"]
[ext_resource type="PackedScene" uid="uid://bjwa7poyvyxhu" path="res://scenes/utils/link/connection/connection_area.tscn" id="4_pkd8x"]
[ext_resource type="Script" uid="uid://bfib056ywhjif" path="res://scripts/highlightable.gd" id="6_j7v7c"]
[ext_resource type="Script" uid="uid://bm1he3x5w8vxv" path="res://scripts/resources/HighlightOptions.gd" id="7_dm5f8"]
[ext_resource type="Script" uid="uid://ck6y410gncrcr" path="res://scripts/mouse_interaction_area2d.gd" id="8_d7fjr"]
[ext_resource type="PackedScene" uid="uid://egp0h1iv4mjx" path="res://scenes/ui/number_listing/number_listing.tscn" id="9_ufcds"]
[ext_resource type="PackedScene" uid="uid://dm2dffmkn1e7t" path="res://scenes/utils/link/activation/activation.tscn" id="10_ufcds"]

[sub_resource type="LabelSettings" id="LabelSettings_j7v7c"]
line_spacing = 0.0
font_size = 32
outline_size = 8
outline_color = Color(0.101961, 0.101961, 0.101961, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_dm5f8"]
radius = 32.0

[sub_resource type="Resource" id="Resource_d7fjr"]
script = ExtResource("7_dm5f8")
type = 0
flow_in = true
flow_out = false
metadata/_custom_type_script = "uid://bm1he3x5w8vxv"

[sub_resource type="CircleShape2D" id="CircleShape2D_d48l0"]
radius = 32.0

[node name="OutputValidator" type="Node2D"]
script = ExtResource("1_bf6jn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0invr")
hframes = 3
frame = 2

[node name="RequestedNumber" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.556863)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -9.5
offset_right = 20.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_j7v7c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumberMovement" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("2_md46i")
root = NodePath("..")
sends = false
metadata/_custom_type_script = "uid://cwhvnxwvdhkh5"

[node name="Resettable" type="Node" parent="."]
script = ExtResource("3_bf6jn")
metadata/_custom_type_script = "uid://dmbgxyol7327d"

[node name="MovementConnectionArea" parent="." node_paths=PackedStringArray("number_movement") instance=ExtResource("4_pkd8x")]
sends = false
number_movement = NodePath("../NumberMovement")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementConnectionArea"]
visible = false
shape = SubResource("CircleShape2D_dm5f8")

[node name="ActivationConnectionArea2" parent="." node_paths=PackedStringArray("activatable") instance=ExtResource("4_pkd8x")]
collision_layer = 8
receives = false
activatable = NodePath("../Activation")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationConnectionArea2"]
visible = false
shape = SubResource("CircleShape2D_dm5f8")

[node name="Highlightable" type="Node" parent="." node_paths=PackedStringArray("scale_target", "outline_target")]
script = ExtResource("6_j7v7c")
highlight_options = SubResource("Resource_d7fjr")
scale_target = NodePath("../Sprite2D")
outline_target = NodePath("../Sprite2D")
metadata/_custom_type_script = "uid://bfib056ywhjif"

[node name="MouseInteractionArea2D" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 0
script = ExtResource("8_d7fjr")
metadata/_custom_type_script = "uid://ck6y410gncrcr"

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseInteractionArea2D"]
shape = SubResource("CircleShape2D_d48l0")

[node name="NumberListing" parent="." node_paths=PackedStringArray("mouse_area") instance=ExtResource("9_ufcds")]
unique_name_in_owner = true
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -60.0
offset_bottom = 0.0
grow_vertical = 0
pivot_offset = Vector2(30, 30)
size_flags_horizontal = 6
mouse_area = NodePath("../MouseInteractionArea2D")

[node name="Activation" parent="." node_paths=PackedStringArray("target") instance=ExtResource("10_ufcds")]
target = NodePath("..")
trigger_signals = Array[String](["validation_complete"])
auto = 0

[connection signal="number_received" from="NumberMovement" to="." method="check_number"]
[connection signal="reset_requested" from="Resettable" to="." method="reset"]
[connection signal="success_activated" from="Activation" to="Highlightable" method="play_outline_animation"]
